--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Platypus Readout</title>
+        <title>Tiamana Pa</title>
         <meta name="description" content="Defense against the dark arts.">
         <link rel="stylesheet" href="main.css">
     </head>
