--- a/image.html
+++ b/image.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Tiamana pa</title>
-        <meta name="description" content="Defense against the dark arts.">
+        <meta name="description" content="Some words and pictures.">
         <link rel="stylesheet" href="main.css">
         <script type="text/javascript" src="loadImage.js" async></script>
     </head>
