--- a/enny/index.html
+++ b/enny/index.html
@@ -5,10 +5,12 @@
 
 <style> 
 <!--
-	* { border: 1px solid #73AD21; overflow: auto; }
-	p { margin: 0px 0px 10px 0px; }
-	.left { float:left; width:20% }
-	.right {  }
+	body * { border: 1px solid #73AD21; overflow: auto;  }
+	div { position:relative; min-width=40em; }
+	p { margin: 0px 0px 0.5em 0px; }
+	.left { float:left; width:12em; }
+	.mid { float:left; clear:right; top:0; left:12em;}
+
 -->
 </style>
 
@@ -28,22 +30,25 @@
 <h3>	Experience	</h3>
 
 <p class="left">	May 2015 - Nov 2015	</p>
-<p class="right">	Master's Thesis		<br>
+<p>			Master's Thesis		<br>
 			Institut f&#252;r Nachrichtentechnik, RWTH Aachen 
-			University		</p>
+			University		<br>
+			Germany			</p>
 
 <p class="left">	Feb 2015 - May 2015	</p>
-<p class="right">	Research Assistant		<br>
+<p>			Research Assistant		<br>
 			Forschungsinstitut f&#252;r Wasser- und Abfallwirtschaft 
-			an der RWTH Aachen		</p>
+			an der RWTH Aachen		<br>
+			Germany			</p>
+<p>	Did some stuff for a project, lol	</p>
 
 <p class="left">	Feb 2009 - May 2012	</p>
-<p class="right">	Process Engineer		<br>
+<p>			Process Engineer		<br>
 			Carter Holt Harvey Pulp and Paper	<br>
 			New Zealand		</p>
 
 <p class="left">	Nov 2007 - Feb 2008	</p>
-<p class="right">	Undergraduate Internship		<br>
+<p>			Undergraduate Internship		<br>
 			Fonterra Co-operative Group Limited	<br>
 			New Zealand		</p>
 
@@ -52,8 +57,55 @@
 			Tatua Co-operative Dairy Company Limited<br>
 			New Zealand		</p>
 
+
 <h3>	Education	</h3>
 
+<p class="left">	Oct 2013 - Nov 2015	</p>
+<p>			MSc Simulation Science		<br>
+			German Research School for Simulation Sciences, 
+			RWTH Aachen University		<br>
+			Germany			</p>
+
+<p class="left">	Feb 2005 - Nov 2009	</p>
+<p>			Bachelor of Engineering (Chemical and Materials)<br>
+			University of Auckland	<br>
+			New Zealand		</p>
+
+
 <h3>	Skills	</h3>
+
+<div>
+<p class="left">	Languages	</p>
+<p> 			English native speaker	</p>
+</div>
+
+<div>
+<p class="left">	Programming	</p>
+<p class="mid"> 	C/C++, Python	<br>
+			Fortran		<br>
+			Java, Javascript	</p>
+<p>			(advanced)<br>(intermediate)<br>(basic)	</p>
+</div>
+
+<div>
+<p class="left">	Parallel Programming	</p>
+<p class="mid"> 	MPI, OpenMP, Posix threads	</p>
+<p>			(advanced)	</p>
+</div>
+
+<div>
+<p class="left">	Imaging		</p>
+<p class="mid"> 	OpenCV, ImageMagick 	<br>
+			OpenCL, OpenGL, CUDA, Paraview, VTK	</p>
+<p>			(advanced)<br>(intermediate)</p>
+</div>
+
+<p class="left">	Numerical Methods	</p>
+
+<p class="left">	Fluid Dynamics	</p>
+
+<p class="left">	Molecular Dynamics	</p>
+
+<p class="left">	General Computing	</p>
 
 </body>
