--- a/enny/index.html
+++ b/enny/index.html
@@ -11,6 +11,13 @@
 	.left { float:left; width:12em; }
 	.mid { float:left; clear:right; top:0; left:12em;}
 
+	.latex sub, .latex sup { text-transform:uppercase; }
+	.latex sub { vertical-align:-0.5ex; margin-left:-0.1667em;
+		     margin-right:-0.125em; }
+	.latex, .latex sub { font-size:1em; }
+	.latex sup { font-size:0.85em; vertical-align:0.15em; 
+		     margin-left:-0.36em; margin-right:-0.15em; }
+
 -->
 </style>
 
@@ -100,12 +107,29 @@
 <p>			(advanced)<br>(intermediate)</p>
 </div>
 
+<div>
 <p class="left">	Numerical Methods	</p>
+<p> 			Finite difference / Finite volume methods,
+			Sparse matrix operations, Iterative solvers,
+			Inverse problems, Regression, Monte Carlo methods</p>
+</div>
 
+<div>
 <p class="left">	Fluid Dynamics	</p>
+<p> 			Stabilised FEM, Isogeometric Analysis, 
+			Lattice Boltzmann methods	</p>
+</div>
 
+<div>
 <p class="left">	Molecular Dynamics	</p>
+<p> 			Lammps			</p>
+</div>
 
+<div>
 <p class="left">	General Computing	</p>
+<p> 			GNU/Linux, Bash, Git, Subversion, Matlab/Simulink, 
+			<span class="latex">L<sup>a</sup>T<sub>e</sub>X</span>
+			</p>
+</div>
 
 </body>
