Added contact deets

--- a/enny/index.html
+++ b/enny/index.html
@@ -5,11 +5,13 @@
 
 <style> 
 <!--
-	body * { border: 1px solid #73AD21; overflow: auto;  }
+        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,400italic);
+	body * { overflow: auto; font-family:'Open Sans', sans-serif; }
 	div { position:relative; min-width=40em; }
 	p { margin: 0px 0px 0.5em 0px; }
 	.left { float:left; width:12em; }
 	.mid { float:left; clear:right; top:0; left:12em;}
+        .light { font-weight:300; }
 
 	.latex sub, .latex sup { text-transform:uppercase; }
 	.latex sub { vertical-align:-0.5ex; margin-left:-0.1667em;
@@ -33,50 +35,59 @@
 
 <h3>	Contact	Info	</h3>
 
+<p>			Aachen 52066            <br>
+			Deutschland             </p>
+
+<p>                     +49 12 7575 01005       </p>
+
+<p>                     philiprkenny@gmail.com  </p>
+
+<p class="url">         phili.pk/enny           </p>
+
 
 <h3>	Experience	</h3>
 
 <p class="left">	May 2015 - Nov 2015	</p>
-<p>			Master's Thesis		<br>
+<p>			<b>Master's Thesis</b>	<br>
 			Institut f&#252;r Nachrichtentechnik, RWTH Aachen 
 			University		<br>
-			Germany			</p>
+			<span class="light">Germany</span>		</p>
 
 <p class="left">	Feb 2015 - May 2015	</p>
-<p>			Research Assistant		<br>
+<p>			<b>Research Assistant</b>		<br>
 			Forschungsinstitut f&#252;r Wasser- und Abfallwirtschaft 
 			an der RWTH Aachen		<br>
-			Germany			</p>
-<p>	Did some stuff for a project, lol	</p>
+			<span class="light">Germany</span>		</p>
 
 <p class="left">	Feb 2009 - May 2012	</p>
-<p>			Process Engineer		<br>
+<p>			<b>Process Engineer</b>		<br>
 			Carter Holt Harvey Pulp and Paper	<br>
-			New Zealand		</p>
+			<span class="light">New Zealand</span>		</p>
 
 <p class="left">	Nov 2007 - Feb 2008	</p>
-<p>			Undergraduate Internship		<br>
+<p>			<b>Undergraduate Internship</b>		<br>
 			Fonterra Co-operative Group Limited	<br>
-			New Zealand		</p>
+			<span class="light">New Zealand</span>		</p>
 
 <p class="left">	Nov 2006 - Mar 2007	</p>
-<p class="right">	Undergraduate Internship		<br>
+<p class="right">	<b>Undergraduate Internship</b>		<br>
 			Tatua Co-operative Dairy Company Limited<br>
-			New Zealand		</p>
+			<span class="light">New Zealand</span>		</p>
 
 
 <h3>	Education	</h3>
 
 <p class="left">	Oct 2013 - Nov 2015	</p>
-<p>			MSc Simulation Science		<br>
+<p>			<b>MSc Simulation Science</b>		<br>
 			German Research School for Simulation Sciences, 
 			RWTH Aachen University		<br>
-			Germany			</p>
+			<span class="light">Germany</span>		</p>
 
 <p class="left">	Feb 2005 - Nov 2009	</p>
-<p>			Bachelor of Engineering (Chemical and Materials)<br>
+<p>			<b>Bachelor of Engineering 
+                        (Chemical and Materials)</b><br>
 			University of Auckland	<br>
-			New Zealand		</p>
+			<span class="light">New Zealand</span>		</p>
 
 
 <h3>	Skills	</h3>
