--- a/enny/index.html
+++ b/enny/index.html
@@ -42,7 +42,7 @@
 
 <p>                     philiprkenny@gmail.com  </p>
 
-<p class="url">         phili.pk/enny           </p>
+<a href="phili.pk/kenny">         phili.pk/enny </a>
 
 
 <h3>	Experience	</h3>
