fixed www href again

--- a/enny/index.html
+++ b/enny/index.html
@@ -42,7 +42,7 @@
 
 <p>                     philiprkenny@gmail.com  </p>
 
-<a href="phili.pk/enny">         phili.pk/enny </a>
+<a href="http://www.phili.pk/enny">         phili.pk/enny </a>
 
 
 <h3>	Experience	</h3>
