--- a/enny/index.html
+++ b/enny/index.html
@@ -9,7 +9,8 @@
 	body * { overflow: auto; font-family:'Open Sans', sans-serif; }
 	div { position:relative; min-width=40em; }
 	p { margin: 0px 0px 0.5em 0px; }
-	.left { float:left; width:12em; }
+        em { font-weight:300; }
+	.left { float:left; clear:both; width:12em; }
 	.mid { float:left; clear:right; top:0; left:12em;}
         .light { font-weight:300; }
 
@@ -99,23 +100,20 @@
 
 <div>
 <p class="left">	Programming	</p>
-<p class="mid"> 	C/C++, Python	<br>
-			Fortran		<br>
-			Java, Javascript	</p>
-<p>			(advanced)<br>(intermediate)<br>(basic)	</p>
+<p> 			C/C++, Python <em>(advanced)</em>	<br>
+			Fortran	<em>(intermediate)</em>		<br>
+			Java, Javascript <em>(basic)</em>	</p>
 </div>
 
 <div>
 <p class="left">	Parallel Programming	</p>
-<p class="mid"> 	MPI, OpenMP, Posix threads	</p>
-<p>			(advanced)	</p>
+<p> 	MPI, OpenMP, Posix threads <em>(advanced)</em>	</p>
 </div>
 
 <div>
 <p class="left">	Imaging		</p>
-<p class="mid"> 	OpenCV, ImageMagick 	<br>
-			OpenCL, OpenGL, CUDA, Paraview, VTK	</p>
-<p>			(advanced)<br>(intermediate)</p>
+<p> 	OpenCV, ImageMagick <em>(advanced)</em>	<br>
+			OpenCL, OpenGL, CUDA, Paraview, VTK <em>(intermediate)</em>	</p>
 </div>
 
 <div>
