--- a/enny/index.html
+++ b/enny/index.html
@@ -5,7 +5,7 @@
 
 <style> 
 <!--
-        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,400italic);
+        @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,400italic,300italic);
 	body * { overflow: auto; font-family:'Open Sans', sans-serif; }
 	div { position:relative; min-width=40em; }
 	p { margin: 0px 0px 0.5em 0px; }
