changed empahsis styling

--- a/enny/index.html
+++ b/enny/index.html
@@ -9,7 +9,7 @@
 	body * { overflow: auto; font-family:'Open Sans', sans-serif; }
 	div { position:relative; min-width=40em; }
 	p { margin: 0px 0px 0.5em 0px; }
-        em { font-weight:300; }
+        em { font-weight:300italic; }
 	.left { float:left; clear:both; width:12em; }
 	.mid { float:left; clear:right; top:0; left:12em;}
         .light { font-weight:300; }
