More colour and misc formatting

--- a/enny/index.html
+++ b/enny/index.html
@@ -6,17 +6,19 @@
 <style> 
 <!--
         @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,400italic,300italic);
-	body * { overflow:auto; font-family:'Open Sans', sans-serif; max-width:60em;/* border:dashed 1px;*/ }
+	body * { overflow:auto; font-family:'Open Sans', sans-serif; max-width:60em; /*border:dashed 1px;*/ }
 	div { min-width:30em; }
+	h1 { margin-bottom:0em; }
 	h3 { color:#247de2; }
+	h4 { color:#7a8899; margin-top:0em; }
 	p { margin: 0px 0px 0.5em 0px; }
         em { font-weight:lighter;  color: #247de2;}
 	b { font-weight:600; }
-	hr {  height:1px; background-color:#247de2; border:#247de2 }
-	.left { float:left; clear:both; width:12em; }
+	hr {  height:1px; background-color:#7a8899; border:#7a8899 }
+	.left { float:left; clear:both; width:12em; font-size:0.8em; margin-top:0.2em;}
         .light { font-weight:300; }
 	.small { font-size:0.1em; }
-        .aside { float:right; min-width:15em; text-align:right;}
+        .aside { float:right; min-width:15em; font-size:small; text-align:right; color:#7a8899; }
         #title { float:left; min-width:15em; }
 	/*#header { position:fixed; }*/
 
@@ -39,7 +41,7 @@
 <div id="header">
 <div id="title">
 <h1>	Philip Kenny	</h1>
-<h4>	Curriculum Vitae</h4>
+<h4 class="light">	Curriculum Vitae</h4>
 </div>
 
 <!-- <div><hr></hr></div> -->
