--- a/enny/index.html
+++ b/enny/index.html
@@ -1,4 +1,5 @@
-<html>
+ <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
+<html xmlns="http://www.w3.org/1999/xhtml">
  
 <head>
 <title>	Philip Kenny - Curriculum Vitae	</title>
@@ -14,7 +15,8 @@
 	p { margin: 0px 0px 0.5em 0px; }
         em { font-weight:lighter;  color: #247de2;}
 	b { font-weight:600; }
-	hr {  height:1px; background-color:#7a8899; border:#7a8899 }
+	hr { height:1px; color:#7a8899; background-color:#7a8899; border:#7a8899; margin-top: 0.5em; margin-bottom: 0.5em;}
+   
 	.left { float:left; clear:both; width:12em; font-size:0.8em; margin-top:0.2em;}
         .light { font-weight:300; }
 	.small { font-size:0.1em; }
@@ -44,9 +46,9 @@
 <h4 class="light">	Curriculum Vitae</h4>
 </div>
 
-<!-- <div><hr></hr></div> -->
+<!-- <div><hr /></div> -->
 <div class="aside">
-<p>			Aachen 52066            <br>
+<p>			Aachen 52066            <br />
 			Deutschland             </p>
 
 <p>                     +49 12 7575 01005       </p>
@@ -57,56 +59,56 @@
 </div>
 </div>
 
-<div><hr></hr></div>
+<div><hr /></div>
 
 <h3>	Experience	</h3>
 
 <p class="left">	May 2015 - Nov 2015	</p>
-<p>			<b>Master's Thesis</b>	<br>
+<p>			<b>Master's Thesis</b>	<br />
 			Institut f&#252;r Nachrichtentechnik, RWTH Aachen 
-			University		<br>
+			University		<br />
 			<span class="light">Germany</span>		</p>
 
 <p class="left">	Feb 2015 - May 2015	</p>
-<p>			<b>Research Assistant</b>		<br>
+<p>			<b>Research Assistant</b>		<br />
 			Forschungsinstitut f&#252;r Wasser- und Abfallwirtschaft 
-			an der RWTH Aachen		<br>
+			an der RWTH Aachen		<br />
 			<span class="light">Germany</span>		</p>
 
 <p class="left">	Feb 2009 - May 2012	</p>
-<p>			<b>Process Engineer</b>		<br>
-			Carter Holt Harvey Pulp and Paper	<br>
+<p>			<b>Process Engineer</b>		<br />
+			Carter Holt Harvey Pulp and Paper	<br />
 			<span class="light">New Zealand</span>		</p>
 
 <p class="left">	Nov 2007 - Feb 2008	</p>
-<p>			<b>Undergraduate Internship</b>		<br>
-			Fonterra Co-operative Group Limited	<br>
+<p>			<b>Undergraduate Internship</b>		<br />
+			Fonterra Co-operative Group Limited	<br />
 			<span class="light">New Zealand</span>		</p>
 
 <p class="left">	Nov 2006 - Mar 2007	</p>
-<p class="right">	<b>Undergraduate Internship</b>		<br>
-			Tatua Co-operative Dairy Company Limited<br>
+<p class="right">	<b>Undergraduate Internship</b>		<br />
+			Tatua Co-operative Dairy Company Limited<br />
 			<span class="light">New Zealand</span>		</p>
 
 
-<div><hr></hr></div>
+<div><hr /></div>
 
 <h3>	Education	</h3>
 
 <p class="left">	Oct 2013 - Nov 2015	</p>
-<p>			<b>MSc Simulation Science</b>		<br>
+<p>			<b>MSc Simulation Science</b>		<br />
 			German Research School for Simulation Sciences, 
-			RWTH Aachen University		<br>
+			RWTH Aachen University		<br />
 			<span class="light">Germany</span>		</p>
 
 <p class="left">	Feb 2005 - Nov 2009	</p>
 <p>			<b>Bachelor of Engineering 
-                        (Chemical and Materials)</b><br>
-			University of Auckland	<br>
+                        (Chemical and Materials)</b><br />
+			University of Auckland	<br />
 			<span class="light">New Zealand</span>		</p>
 
 
-<div><hr></hr></div>
+<div><hr /></div>
 
 <h3>	Skills	</h3>
 
@@ -115,31 +117,31 @@
 <p> 			English native speaker	</p>
 </div>
 
-<br class="small">
+<br class="small" />
 
 <div>
 <p class="left">	Programming	</p>
-<p> 			C/C++, Python <em>(advanced)</em>	<br>
-			Fortran	<em>(intermediate)</em>		<br>
+<p> 			C/C++, Python <em>(advanced)</em>	<br />
+			Fortran	<em>(intermediate)</em>		<br />
 			Java, Javascript <em>(basic)</em>	</p>
 </div>
 
-<br class="small">
+<br class="small" />
 
 <div>
 <p class="left">	Parallel Programming	</p>
 <p> 	MPI, OpenMP, Posix threads <em>(advanced)</em>	</p>
 </div>
 
-<br class="small">
+<br class="small" />
 
 <div>
 <p class="left">	Imaging		</p>
-<p> 			OpenCV, ImageMagick <em>(advanced)</em>	<br>
+<p> 			OpenCV, ImageMagick <em>(advanced)</em>	<br />
 			OpenCL, OpenGL, CUDA, Paraview, VTK <em>(intermediate)</em>	</p>
 </div>
 
-<br class="small">
+<br class="small" />
 
 <div>
 <p class="left">	Numerical Methods	</p>
@@ -148,7 +150,7 @@
 			Inverse problems, Regression, Monte Carlo methods</p>
 </div>
 
-<br class="small">
+<br class="small" />
 
 <div>
 <p class="left">	Fluid Dynamics	</p>
@@ -156,14 +158,14 @@
 			Lattice Boltzmann methods	</p>
 </div>
 
-<br class="small">
+<br class="small" />
 
 <div>
 <p class="left">	Molecular Dynamics	</p>
 <p> 			Lammps			</p>
 </div>
 
-<br class="small">
+<br class="small" />
 
 <div>
 <p class="left">	General Computing	</p>
