--- a/enny/index.html
+++ b/enny/index.html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
  
 <head>
+<meta charset="utf-8"/>
 <title>	Philip Kenny - Curriculum Vitae	</title>
 
-<style> 
+<style type="text/css"> 
 <!--
         @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,300,400italic,300italic);
 	body * { overflow:auto; font-family:'Open Sans', sans-serif; max-width:60em; /*border:dashed 1px;*/ }
@@ -19,7 +20,7 @@
    
 	.left { float:left; clear:both; width:12em; font-size:0.8em; margin-top:0.2em;}
         .light { font-weight:300; }
-	.small { font-size:0.1em; }
+	.small { height:0.1em; }
         .aside { float:right; min-width:15em; font-size:small; text-align:right; color:#7a8899; }
         #title { float:left; min-width:15em; }
 	/*#header { position:fixed; }*/
@@ -117,7 +118,7 @@
 <p> 			English native speaker	</p>
 </div>
 
-<br class="small" />
+<div class="small" />
 
 <div>
 <p class="left">	Programming	</p>
@@ -133,7 +134,7 @@
 <p> 	MPI, OpenMP, Posix threads <em>(advanced)</em>	</p>
 </div>
 
-<br class="small" />
+<div class="small" />
 
 <div>
 <p class="left">	Imaging		</p>
@@ -141,7 +142,7 @@
 			OpenCL, OpenGL, CUDA, Paraview, VTK <em>(intermediate)</em>	</p>
 </div>
 
-<br class="small" />
+<div class="small" />
 
 <div>
 <p class="left">	Numerical Methods	</p>
@@ -150,7 +151,7 @@
 			Inverse problems, Regression, Monte Carlo methods</p>
 </div>
 
-<br class="small" />
+<div class="small" />
 
 <div>
 <p class="left">	Fluid Dynamics	</p>
@@ -158,14 +159,14 @@
 			Lattice Boltzmann methods	</p>
 </div>
 
-<br class="small" />
+<div class="small" />
 
 <div>
 <p class="left">	Molecular Dynamics	</p>
 <p> 			Lammps			</p>
 </div>
 
-<br class="small" />
+<div class="small" />
 
 <div>
 <p class="left">	General Computing	</p>
