--- a/enny/index.html
+++ b/enny/index.html
@@ -127,7 +127,7 @@
 			Java, Javascript <em>(basic)</em>	</p>
 </div>
 
-<br class="small" />
+<div class="small" />
 
 <div>
 <p class="left">	Parallel Programming	</p>
@@ -176,3 +176,4 @@
 </div>
 
 </body>
+</html>
