--- a/enny/index.html
+++ b/enny/index.html
@@ -118,7 +118,7 @@
 <p> 			English native speaker	</p>
 </div>
 
-<div class="small" />
+<div class="small" ></div>
 
 <div>
 <p class="left">	Programming	</p>
@@ -127,14 +127,14 @@
 			Java, Javascript <em>(basic)</em>	</p>
 </div>
 
-<div class="small" />
+<div class="small" ></div>
 
 <div>
 <p class="left">	Parallel Programming	</p>
 <p> 	MPI, OpenMP, Posix threads <em>(advanced)</em>	</p>
 </div>
 
-<div class="small" />
+<div class="small" ></div>
 
 <div>
 <p class="left">	Imaging		</p>
@@ -142,7 +142,7 @@
 			OpenCL, OpenGL, CUDA, Paraview, VTK <em>(intermediate)</em>	</p>
 </div>
 
-<div class="small" />
+<div class="small" ></div>
 
 <div>
 <p class="left">	Numerical Methods	</p>
@@ -151,7 +151,7 @@
 			Inverse problems, Regression, Monte Carlo methods</p>
 </div>
 
-<div class="small" />
+<div class="small" ></div>
 
 <div>
 <p class="left">	Fluid Dynamics	</p>
@@ -159,14 +159,14 @@
 			Lattice Boltzmann methods	</p>
 </div>
 
-<div class="small" />
+<div class="small" ></div>
 
 <div>
 <p class="left">	Molecular Dynamics	</p>
 <p> 			Lammps			</p>
 </div>
 
-<div class="small" />
+<div class="small" ></div>
 
 <div>
 <p class="left">	General Computing	</p>
