Added job descriptions

--- a/enny/index.html
+++ b/enny/index.html
@@ -74,22 +74,32 @@
 <p>			<b>Research Assistant</b>		<br />
 			Forschungsinstitut f&#252;r Wasser- und Abfallwirtschaft 
 			an der RWTH Aachen		<br />
-			<span class="light">Germany</span>		</p>
+			<span class="light">Germany</span>	<br />
+			<i>Created Matlab/Simulink model of biomethanol reactor
+			to support business case of installing pilot reactor
+			for trial project</i>		</p>
 
 <p class="left">	Feb 2009 - May 2012	</p>
 <p>			<b>Process Engineer</b>		<br />
 			Carter Holt Harvey Pulp and Paper	<br />
-			<span class="light">New Zealand</span>		</p>
+			<span class="light">New Zealand</span>	<br />
+			<i>Employed onsite trialling new equipment and
+			processes, managing planned outages, safety procedures
+			and troubleshooting equipment</i>	</p>
 
 <p class="left">	Nov 2007 - Feb 2008	</p>
 <p>			<b>Undergraduate Internship</b>		<br />
 			Fonterra Co-operative Group Limited	<br />
-			<span class="light">New Zealand</span>		</p>
+			<span class="light">New Zealand</span>	<br />
+			<i>Worked in lactose fermentation and ethanol 
+			distillation plant conducting laboratory trials</i></p>
 
 <p class="left">	Nov 2006 - Mar 2007	</p>
 <p class="right">	<b>Undergraduate Internship</b>		<br />
 			Tatua Co-operative Dairy Company Limited<br />
-			<span class="light">New Zealand</span>		</p>
+			<span class="light">New Zealand</span>	<br />
+			<i>Worked in protein extraction plant operating ion 
+			exchange columns and freeze dryers</i></p>
 
 
 <div><hr /></div>
