--- a/enny/index.html
+++ b/enny/index.html
@@ -22,6 +22,7 @@
 	.left { float:left; clear:both; width:12em; font-size:0.8em; margin-top:0.2em;}
         .light { font-weight:300; font-size:0.9em; }
 	.small { height:0.1em; }
+	.large { height:1em; }
         .aside { float:right; min-width:15em; font-size:small; text-align:right; color:#7a8899; margin-bottom:0em; }
 	.mail { color:#7a8899; text-decoration:none; }
 
@@ -47,6 +48,8 @@
 
 <body>
 
+<div class="large"></div>
+
 <div id="header">
 <div id="title">
 <h1>	Philip Kenny	</h1>
@@ -60,12 +63,13 @@
 
 <p>                     +49 12 7575 01005       </p>
 
-<a class="mail", href="mailto:philiprkenny@gmail.com">philiprkenny@gmail.com</a>
+<a class="mail" href="mailto:philiprkenny@gmail.com">philiprkenny@gmail.com</a>
 <br />
 
 <a href="http://www.phili.pk/enny">         phili.pk/enny </a>
 </div>
 </div>
+<div class="large"></div>
 
 <div><hr /></div>
 
@@ -113,7 +117,8 @@
 			<span class="light">New Zealand</span>	<br />
 			<i>Worked in protein extraction plant operating ion 
 			exchange columns and freeze dryers</i></p>
-<div/>
+</div>
+<div class="large"></div>
 
 <div><hr /></div>
 
@@ -132,6 +137,7 @@
 			University of Auckland,
 			<span class="light">New Zealand</span>		</p>
 </div>
+<div class="large"></div>
 
 <div><hr /></div>
 
