cosmetic fixes / whitespace

--- a/enny/index.html
+++ b/enny/index.html
@@ -11,7 +11,7 @@
 	body * { overflow:auto; font-family:'Open Sans', sans-serif; max-width:60em; /*border:dashed 1px;*/ }
 	div { min-width:30em; }
 	h1 { margin-bottom:0em; }
-	h3 { color:#247de2; }
+	h3 { color:#247de2; margin-top:0.8em; }
 	h4 { color:#7a8899; margin-top:0em; }
 	p { margin: 0px 0px 0.5em 0px; }
         em { font-weight:lighter; font-size:0.9em;  color: #247de2; }
@@ -23,7 +23,7 @@
         .light { font-weight:300; font-size:0.9em; }
 	.small { height:0.1em; }
 	.large { height:1em; }
-        .aside { float:right; min-width:15em; font-size:small; text-align:right; color:#7a8899; margin-bottom:0em; }
+        .aside { float:right; min-width:15em; font-size:0.9em; text-align:right; color:#7a8899; margin-bottom:0em; }
 	.mail { color:#7a8899; text-decoration:none; }
 
         #title { float:left; min-width:15em; }
@@ -63,8 +63,9 @@
 
 <p>                     +49 12 7575 01005       </p>
 
+<p>
 <a class="mail" href="mailto:philiprkenny@gmail.com">philiprkenny@gmail.com</a>
-<br />
+</p>
 
 <a href="http://www.phili.pk/enny">         phili.pk/enny </a>
 </div>
@@ -83,8 +84,8 @@
 			<span class="light">Germany</span>	<br />
 			<em>Title: Investigations into Affine Invariant Feature
 			Detection</em>	<br />
-			<i>Compared and modified a selection of common keypoint 
-			detectors with the intent of improving
+			<i>Comparison and modification of a selection of common
+			image keypoint detectors with the intent of improving
 			performance</i></p>
 
 <p class="left">	Feb 2015 - May 2015	</p>
@@ -92,7 +93,7 @@
 			Forschungsinstitut f&#252;r Wasser- und Abfallwirtschaft 
 			an der RWTH Aachen,		
 			<span class="light">Germany</span>	<br />
-			<i>Created Matlab/Simulink model of biomethanol reactor
+			<i>Developed Matlab/Simulink model of biomethanol reactor
 			to support business case of installing pilot reactor
 			for trial project</i>		</p>
 
@@ -163,7 +164,8 @@
 <div>
 <p class="left">	Parallel Programming	</p>
 <p> 			MPI,&nbsp; OpenMP,&nbsp; Posix threads&nbsp;
-			 <em>(advanced)</em>	</p>
+			 <em>(advanced)</em>	<br />
+			OpenCL,&nbsp;  CUDA,&nbsp;  <em>(intermediate)</em></p>
 </div>
 
 <div class="small" ></div>
@@ -172,7 +174,7 @@
 <p class="left">	Imaging		</p>
 <p> 			OpenCV,&nbsp; ImageMagick&nbsp; <em>(advanced)</em>
 			<br />
-			OpenCL,&nbsp; OpenGL,&nbsp; CUDA,&nbsp; Paraview,&nbsp;
+			OpenGL,&nbsp; Paraview,&nbsp;
 			VTK&nbsp; <em>(intermediate)</em>	</p>
 </div>
 
