cosmetic fixes / whitespace

--- a/enny/index.html
+++ b/enny/index.html
@@ -154,9 +154,9 @@
 
 <div>
 <p class="left">	Programming	</p>
-<p> 			C/C++,&nbsp; Python&nbsp; <em>(advanced)</em>	<br />
-			Fortran&nbsp;	<em>(intermediate)</em>		<br />
-			Java,&nbsp; Javascript&nbsp; <em>(basic)</em>	</p>
+<p> 			C/C++,&nbsp; Python&nbsp; <i>(advanced)</i>	<br />
+			Fortran&nbsp;	<i>(intermediate)</i>		<br />
+			Java,&nbsp; Javascript&nbsp; <i>(basic)</i>	</p>
 </div>
 
 <div class="small" ></div>
@@ -164,26 +164,36 @@
 <div>
 <p class="left">	Parallel Programming	</p>
 <p> 			MPI,&nbsp; OpenMP,&nbsp; Posix threads&nbsp;
-			 <em>(advanced)</em>	<br />
-			OpenCL,&nbsp;  CUDA,&nbsp;  <em>(intermediate)</em></p>
+			 <i>(advanced)</i>	<br />
+			OpenCL,&nbsp;  CUDA,&nbsp;  <i>(intermediate)</i></p>
 </div>
 
 <div class="small" ></div>
 
 <div>
 <p class="left">	Imaging		</p>
-<p> 			OpenCV,&nbsp; ImageMagick&nbsp; <em>(advanced)</em>
+<p> 			OpenCV,&nbsp; ImageMagick&nbsp; <i>(advanced)</i>
 			<br />
 			OpenGL,&nbsp; Paraview,&nbsp;
-			VTK&nbsp; <em>(intermediate)</em>	</p>
+			VTK&nbsp; <i>(intermediate)</i>	</p>
 </div>
 
 <div class="small" ></div>
 
 <div>
+<p class="left">	Machine Learning	</p>
+<p>			Clustering&nbsp; (k-means, EM, mean-shift)&nbsp;
+			<i>(intermediate)</i>	<br />
+			Support Vector Machines,&nbsp; Boosting&nbsp; 
+			<i>(basic)</i>		</p>
+</div>
+
+<div class="small"></div>
+
+<div>
 <p class="left">	Numerical Methods	</p>
 <p> 			Finite difference / Finite volume,&nbsp;
-			Sparse matrix operations,&nbsp; Iterative solvers,&nbsp;
+			Sparse matrices,&nbsp; Iterative solvers,&nbsp;
 			Inverse problems,&nbsp; Regression,&nbsp; 
 			Monte Carlo </p>
 </div>
