--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
            border:1px solid rgba(0, 0, 0, 0.09); border-bottom-style:solid; z-index:100000; }
     #nav-space { width:100%; height:4em; }
     .mono { font-family:monospace; }
-    .centre { height:34%; text-align: center;}
+    .centre-wrap { height:34%; text-align: center;}
+    .centre { text-align: center;}
     .vert-wrap { height:33%; }
     .content { max-width:50em; margin:2em auto; padding:1em;
                font-family:'Arvo', serif; text-align:left; 
@@ -45,7 +46,7 @@
 <div id="nav">
 
 <div class="vert-wrap"></div>
-<span class="centre">
+<span class="centre-wrap">
 <a href="http://www.phili.pk">Home</a>
 <span>|</span>
 <a href="http://www.phili.pk">Photos</a>
@@ -90,13 +91,6 @@
 <p> Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great!</p>
 </div>
 
-<div class="content">
-<p> Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great!</p>
-</div>
-
-<div class="content">
-<p> Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great!</p>
-</div>
 
 </body>
 </html>
