--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     language doesn't handle very well) and some manual code optimisation: loop
     unrolling, etc which leads to a lot of repeated code and intermediate vars.
     <div class="centre">
-    <video controls>
+    <video width="400" height="400" controls>
     <source src="longer.mp4" type="video/mp4">
     Your browser does not support the video tag.
     </video> 
