Added heat equation

--- a/index.html
+++ b/index.html
@@ -88,7 +88,16 @@
 </div>
 
 <div class="content">
-<p> Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great! Hello I am some shitty content. Great!</p>
+<h4>Finite Elements</h4>
+<p>
+	I wrote a Finite Element solver for the 2D unsteady heat equation as part of
+    a team of two for another course. (To see what the other half of the team is
+    doing see <a href="http://www.milkyklim.com">milkyklim</a>). The code works
+    with MPI to take advantage of massively parallel architecture of modern 
+    clusters. The implementation takes unstructured meshes, specifically 
+    <a href"http://www.cats.rwth-aachen.de/about/software/formats/mixd">MIXD 
+    format</a> as input and outputs data in VTK format.
+</p>
 </div>
 
 
